--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     </label>
     <br />
   </body>
-  <script src="/src/ml5.min.js"></script>
-  <script src="/src/utils.js"></script>
+  <script src="/src/ext/ml5.min.js"></script>
+  <script src="/src/ext/utils.js"></script>
 
   <script src="/src/main_script.js"></script>
 
-  <script src="/src/essentia.js"></script>
-  <script src="/src/ringbuf.js"></script>
-  <script src="/src/meyda.min.js"></script>
-  <script src="/src/meyda.js"></script>
+  <script src="/src/ext/essentia.js"></script>
+  <script src="/src/ext/ringbuf.js"></script>
+  <script src="/src/ext/meyda.min.js"></script>
+  <script src="/src/ext/meyda.js"></script>
 </html>
