Create print button to download output as a json file.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
     <button id="train" disabled>train</button>
     <button id="predict" disabled>predict</button>
+    <button id="print">print</button>
+
     <label
       >upload data
       <input type="file" accept="application/JSON" id="uploadClassifications"
