Arreglando la validacion

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
       >upload data
       <input type="file" accept="application/JSON" id="uploadClassifications"
     /></label>
-    <!--    THIS IS USED TO GENERATE VALIDATIONS, NOT IMPORTANT IN GENERAL
-  <label
-      >Validate
+    <!--    THIS IS USED TO GENERATE VALIDATIONS, NOT IMPORTANT IN GENERAL-->
+    <label
+      >upload validation
       <input type="file" accept="application/JSON" id="uploadValidation"
     /></label>
-    -->
+    <button id="validate">validate</button>
+    <!-- -->
     <br />
     <label
       >Volume threshold
