cambiando el boton de print

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 
     <button id="train" disabled>train</button>
     <button id="predict" disabled>predict</button>
-    <button id="print">print</button>
 
     <label
       >upload data
@@ -70,6 +69,9 @@
     /></label>
     <button id="validate">validate</button>
     <!-- -->
+    <br />
+    <button id="record">start recording</button>
+    <button id="print">print</button>
     <br />
     <label
       >Volume threshold
